# Bot_ready

./: .breakpoints  .gitignore  CHANGELOG.md  README.md  blue_square.html  bot_lachtan_spacex.py  file::memory:?cache=shared  game_stats_compare.py  index.html  keep_alive.py  main.py  main_lachtan.py  pyproject.toml  requirements.txt  site_generator.py  spacex.json  sqlite_demo.py  stats_compare.py  steam_stats.py  styles.css
.upm/: store.json
cogs/: entertainment.py  main_commands.py  russian_pass.py  session.py
templates/: 3d.html  graph.html  index.html  index_graph.html  scraped_sc.html
