[tool.poetry]
name = "Bot Lachtan"
version = "0.1.0"
description = "Unique bot with Unique functions"
authors = ["chalankolachtanovity@lachtan.sea"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
