[tool.poetry]
name = "Bot-Lachtan"
version = "2.6.3"
description = "Unique bot with Unique functions"
authors = ["chalankolachtanovity", "tajmoti"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
praw = "^7.2.0"
asyncpraw = "^7.2.0"
pymongo = "^3.11.3"
dnspython3 = "^1.15.0"
bs4 = "^0.0.1"
pytz = "^2021.1"
pytesseract = "^0.3.7"
PyNaCl = "^1.4.0"
toml = "^0.10.2"
Flask-RESTful = "^0.3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
